--- a/index.htm
+++ b/index.htm
@@ -19,17 +19,9 @@
 
 
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<!-- Custom Fonts
+    <!-- Custom Font takes forever to load. Disabling.
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-  -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    -->
 </head>
 
 <body>
@@ -75,7 +67,7 @@
                                 <a href="https://www.github.com/xotabu4"><i class="fa fa-github fa-fw fa-3x"></i></a>
                             </li>
                         </ul>
-                        <hr class="small">
+
                     </div>
                 </div>
             </div>
@@ -110,12 +102,9 @@
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x fa-4x"></i>
                                 <i class="fa fa-keyboard-o fa-stack-1x text-primary"></i>
-
                             </span>
-
-
                                 <h4>
-                                    <strong>Manual testing</strong>
+                                <strong>Manual testing</strong>
                                 </h4>
                                 <p>A lot of experience with manual testing - web-applications, web-sites, APIs, mobile applications. Writing test cases, determining priority of bugs, using different test aproaches - pairwise testing, classes of equivalence, boundary testing and many other.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
@@ -176,7 +165,7 @@
                             	</div>
                             	</div>
 
-								<div class="col-md-3 col-sm-6">
+								              <div class="col-md-3 col-sm-6">
                             	<div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 	<i class="fa fa-circle fa-stack-2x"></i>
@@ -230,13 +219,6 @@
         <!-- /.container -->
 
     </section>
-
-    <!-- jQuery and bootstrap
-    <script src="js/jquery.js"></script>
-
-
-    <script src="js/bootstrap.min.js"></script>
--->
 </body>
 
 </html>
