--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div id="contact"class="col-lg-10 col-lg-offset-1 text-center">
-                        <h3><strong>Want to talk with me? Always glad to!</strong></h3>
+                        <h3><strong>Want to talk with me?</strong></h3>
                         <ul class="list-unstyled">
                             <li>
                             <a href="skype:xatabu4"><i class="fa fa-skype fa-2x fa-fw"></i>  xatabu4</a>
