favicons! Theme color added!

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="favicons/vores-l-tartan-sunday-best-152-213357.png">
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="favicons/vores-l-tartan-sunday-best-144-213357.png">
+
+    <!-- Chrome, Firefox OS, Opera and Vivaldi -->
+    <meta name="theme-color" content="#337ab7">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#337ab7">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#337ab7">
+
+
     <title>Oleksandr Khotemskyi</title>
 
     <!-- Bootstrap Core CSS -->
