--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
                                 	<i class="fa fa-laptop fa-stack-1x text-primary"></i>
                             	</span>
                                 <h4>
-                                    <strong>tell about acronyms</strong>
+                                    <strong>Tell about acronyms</strong>
                                 </h4>
                                 <p>HTML, SQL, HTTP/HTTPS, SCRUM and other scary words</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
