--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cog fa-spin fa-stack-1x text-primary"></i>
+                                <i class="fa fa-cog fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Test automation</strong>
