--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Oleksandr Khotemskyi personal website">
+    <meta name="keywords" content="QA,QA automation,WebDriver,Selenium,Quality Assurance,Oleksandr Khotemskyi,Александр Хотемской,Олександр Хотемський">
+    <meta name="author" content="Oleksandr Khotemskyi">
 
     <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="favicons/vores-l-tartan-sunday-best-152-213357.png">
