--- a/website/index.html
+++ b/website/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Oleksandr Khotemsyi personal page">
+    <meta name="author" content="Oleksandr Khotemskyi">
+    <meta http-equiv="refresh" content="1; url=https://xotabu4.github.io/" />
+
+    <title>Oleksandr Khotemskyi</title>
+
+</head>
+
+<body>
+</body>
+
+</html>
 
