open graph data added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta name="description" content="Oleksandr Khotemskyi personal website">
     <meta name="keywords" content="QA,QA automation,WebDriver,Selenium,Quality Assurance,Oleksandr Khotemskyi,Александр Хотемской,Олександр Хотемський">
     <meta name="author" content="Oleksandr Khotemskyi">
+    
+    <!-- Open Graph data -->
+<meta property="og:title" content="Oleksandr Khotemskyi" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://xotabu4.github.io/" />
+<meta property="og:image" content="https://xotabu4.github.io/img/3033972.jpeg" />
+<meta property="og:description" content="Oleksandr Khotemskyi personal website" />
+<meta property="og:site_name" content="Oleksandr Khotemskyi personal website" />
 
     <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="favicons/vores-l-tartan-sunday-best-152-213357.png">
