--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:title" content="Oleksandr Khotemskyi" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://xotabu4.github.io/" />
-
+<meta property="og:image" content="https://xotabu4.github.io/img/3033972.jpeg" />
 <meta property="og:description" content="Oleksandr Khotemskyi personal website" />
 <meta property="og:site_name" content="Oleksandr Khotemskyi personal website" />
 
