--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Oleksandr Khotemskyi personal website">
+    <meta name="description" content="Oleksandr Khotemskyi - automation and manual quality assurance specialist">
     <meta name="keywords" content="QA,QA automation,WebDriver,Selenium,Quality Assurance,Oleksandr Khotemskyi,Александр Хотемской,Олександр Хотемський">
     <meta name="author" content="Oleksandr Khotemskyi">
     
