--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://xotabu4.github.io/" />
 <meta property="og:image" content="https://xotabu4.github.io/img/3033972.jpeg" />
-<meta property="og:description" content="Oleksandr Khotemskyi - automation and manual quality assurance specialist" />
+<meta property="og:description" content="Automation and manual quality assurance specialist" />
 <meta property="og:site_name" content="Oleksandr Khotemskyi personal website" />
 
     <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
