--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <h4>
                                     <strong>Coaching</strong>
                                 </h4>
-                                <p>Teached junior QA guys how to do their work well. Has prepared video lessons for remote teaching guys without IT experience. Support and help for begginners in hard QA work</p>
+                                <p>Coach at Start-IT training center, reading own course about test automation using ProtractorJS. Previously was teaching basics of quality assurance thru online video lessons.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -148,12 +148,12 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-search fa-stack-1x text-primary"></i>
+                                <i class="fa fa-users fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Analyzing and planning</strong>
+                                    <strong>Conference Speaker</strong>
                                 </h4>
-                                <p>Planning for testing, analyzing existing testing aproach, prioritize features, bugs, test-cases, determine risks</p>
+				    <a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH" style="color:red;">YouTube</a>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
