--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                                 <h4>
                                     <strong>Conference Speaker</strong>
                                 </h4>
+				    Participating in different QA conferences, meetups, and other community meetings. Some of my speeches were uploaded to  
 				    <a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH" style="color:red;">YouTube</a>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
