--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <i class="fa fa-users fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Conference Speaker</strong>
+                                    <strong>Presentations and speeches</strong>
                                 </h4>
 				    Participating in different QA conferences, meetups, and other community meetings. Some of my speeches were uploaded to  
 				    <a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH" style="color:red;">YouTube</a>
