--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="description" content="Oleksandr Khotemskyi - automation and manual quality assurance specialist">
     <meta name="keywords" content="QA,QA automation,WebDriver,Selenium,Quality Assurance,Oleksandr Khotemskyi,Александр Хотемской,Олександр Хотемський">
     <meta name="author" content="Oleksandr Khotemskyi">
-    
+
     <!-- Open Graph data -->
-<meta property="og:title" content="Oleksandr Khotemskyi" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://xotabu4.github.io/" />
-<meta property="og:image" content="https://xotabu4.github.io/img/3033972.jpeg" />
-<meta property="og:description" content="Automation and manual quality assurance specialist" />
-<meta property="og:site_name" content="Oleksandr Khotemskyi personal website" />
+    <meta property="og:title" content="Oleksandr Khotemskyi" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://xotabu4.github.io/" />
+    <meta property="og:image" content="https://xotabu4.github.io/img/3033972.jpeg" />
+    <meta property="og:description" content="Automation and manual quality assurance specialist" />
+    <meta property="og:site_name" content="Oleksandr Khotemskyi personal website" />
 
     <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="favicons/vores-l-tartan-sunday-best-152-213357.png">
@@ -44,6 +44,12 @@
     <!-- Custom Font takes forever to load. Disabling.
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     -->
+
+    <!-- Include the GitHub contributions library. -->
+    <script src="./gh-calendar/gh.js"></script>
+
+    <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+    <link rel="stylesheet" href="./gh-calendar/css-responsive.css"/>
 </head>
 
 <body>
@@ -57,44 +63,64 @@
         </div>
     </header>
 
-        <!-- Footer -->
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div id="contact"class="col-lg-10 col-lg-offset-1 text-center">
-                        <h3><strong>Want to talk with me?</strong></h3>
-                        <ul class="list-unstyled">
-                            <li>
-                            <a href="skype:xatabu4"><i class="fa fa-skype fa-2x fa-fw"></i>  xatabu4</a>
-                            <a href="https://telegram.me/xotabu4"><i class="fa fa-paper-plane fa-2x fa-fw" aria-hidden="true"></i>  @xatabu4</a>
-                            <a href="mailto:xotabu4@gmail.com"><i class="fa fa-envelope-o fa-2x fa-fw"></i>  xotabu4@gmail.com</a>
-                            </li>
-                        </ul>
-                        <br>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="https://www.facebook.com/Xotabu4"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/xotabu4"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://vk.com/xotabu4"><i class="fa fa-vk fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.github.com/xotabu4"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                            </li>
-                        </ul>
+    <section id="github">
+        <br>
+        <div class="github col-lg-10 col-lg-offset-1 text-center">
+            <!-- Loading stuff -->
+            Loading the data...
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div id="contact" class="col-lg-10 col-lg-offset-1 text-center">
+                    <h3>
+                        <strong>Want to talk with me?</strong>
+                    </h3>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="skype:xatabu4">
+                                <i class="fa fa-skype fa-2x fa-fw"></i> xatabu4</a>
+                            <a href="https://telegram.me/xotabu4">
+                                <i class="fa fa-paper-plane fa-2x fa-fw" aria-hidden="true"></i> @xatabu4</a>
+                            <a href="mailto:xotabu4@gmail.com">
+                                <i class="fa fa-envelope-o fa-2x fa-fw"></i> xotabu4@gmail.com</a>
+                        </li>
+                    </ul>
+                    <br>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="https://www.facebook.com/Xotabu4">
+                                <i class="fa fa-facebook fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/xotabu4">
+                                <i class="fa fa-twitter fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://vk.com/xotabu4">
+                                <i class="fa fa-vk fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
+                                <i class="fa fa-linkedin fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.github.com/xotabu4">
+                                <i class="fa fa-github fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                    </ul>
 
-                    </div>
                 </div>
             </div>
-        </footer>
-
-
+        </div>
+    </footer>
 
     <!-- Services -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
@@ -103,58 +129,63 @@
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2>I can do</h2>
-					<br>
+                    <br>
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cog fa-stack-1x text-primary"></i>
-                            </span>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-cog fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
                                     <strong>Test automation</strong>
                                 </h4>
-                                <p>Using Java, JavaScript (TypeScript), Python. I used mostly Selenium WebDriver (Appium, ProtractorJS, Selenide and many others). Also i have experience with different tools around - Jenkins, Maven, Spring, NodeJS, NPM, Pip and many others.</p>
+                                <p>Using Java, JavaScript (TypeScript), Python. I used mostly Selenium WebDriver (Appium, ProtractorJS,
+                                    Selenide and many others). Also i have experience with different tools around - Jenkins,
+                                    Maven, Spring, NodeJS, NPM, Pip and many others.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x fa-4x"></i>
-                                <i class="fa fa-keyboard-o fa-stack-1x text-primary"></i>
-                            </span>
+                                    <i class="fa fa-circle fa-stack-2x fa-4x"></i>
+                                    <i class="fa fa-keyboard-o fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
-                                <strong>Manual testing</strong>
+                                    <strong>Manual testing</strong>
                                 </h4>
-                                <p>A lot of experience with manual testing - web-applications, web-sites, APIs, mobile applications. Writing test cases, determining priority of bugs, using different test aproaches - pairwise testing, classes of equivalence, boundary testing and many other.</p>
+                                <p>A lot of experience with manual testing - web-applications, web-sites, APIs, mobile applications.
+                                    Writing test cases, determining priority of bugs, using different test aproaches - pairwise
+                                    testing, classes of equivalence, boundary testing and many other.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-mortar-board fa-stack-1x text-primary"></i>
-                            </span>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-mortar-board fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
                                     <strong>Coaching</strong>
                                 </h4>
-                                <p>Coach at Start-IT training center, reading own course about test automation using ProtractorJS. Previously was teaching basics of quality assurance thru online video lessons.</p>
+                                <p>Coach at Start-IT training center, reading own course about test automation using ProtractorJS.
+                                    Previously was teaching basics of quality assurance thru online video lessons.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-users fa-stack-1x text-primary"></i>
-                            </span>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-users fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
                                     <strong>Presentations and speeches</strong>
                                 </h4>
-				    Participating in different QA conferences, meetups, and other community meetings. Some of my speeches were uploaded to  
-				    <a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH" style="color:red;">YouTube</a>
+                                Participating in different QA conferences, meetups, and other community meetings. Some of my speeches were uploaded to
+                                <a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH" style="color:red;">YouTube</a>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -167,73 +198,74 @@
             <!-- /.row -->
         </div>
         <!-- /.container -->
-<div class="container">
+        <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                	<div class="row">
+                    <div class="row">
 
-                				<div class="col-md-3 col-sm-6">
-                            	<div class="service-item">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                	<i class="fa fa-circle fa-stack-2x"></i>
-                                	<i class="fa fa-laptop fa-stack-1x text-primary"></i>
-                            	</span>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-laptop fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
                                     <strong>Tell about acronyms</strong>
                                 </h4>
                                 <p>HTML, SQL, HTTP/HTTPS, SCRUM and other scary words</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
 
-                            	</div>
-                            	</div>
+                            </div>
+                        </div>
 
-								              <div class="col-md-3 col-sm-6">
-                            	<div class="service-item">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                	<i class="fa fa-circle fa-stack-2x"></i>
-                                	<i class="fa fa-gamepad fa-stack-1x text-primary"></i>
-                            	</span>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-gamepad fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
                                     <strong>Gaming</strong>
                                 </h4>
                                 <p>Fallout, Starcraft, Diablo, Total War series. PS4 gamer.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
 
-                           		</div>
-                           		</div>
+                            </div>
+                        </div>
 
-                           		<div class="col-md-3 col-sm-6">
-                            	<div class="service-item">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                	<i class="fa fa-circle fa-stack-2x"></i>
-                                	<i class="fa fa-moon-o fa-stack-1x text-primary"></i>
-                            	</span>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-moon-o fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
                                     <strong>Watching stars</strong>
                                 </h4>
                                 <p>I love stars, planets, space, and astronomy.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
 
-                            	</div>
-                            	</div>
+                            </div>
+                        </div>
 
-                            	<div class="col-md-3 col-sm-6">
-                            	<div class="service-item">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                	<i class="fa fa-circle fa-stack-2x"></i>
-                                	<i class="fa fa-medkit fa-stack-1x text-primary"></i>
-                            	</span>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-medkit fa-stack-1x text-primary"></i>
+                                </span>
                                 <h4>
                                     <strong>Medicine</strong>
                                 </h4>
-                                <p>3 years in medical college and work in hospital was not wasted for me. Still loving all those medicine tricks</p>
+                                <p>3 years in medical college and work in hospital was not wasted for me. Still loving all those
+                                    medicine tricks</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
 
-                            	</div>
-                            	</div>
-
                             </div>
+                        </div>
+
                     </div>
+                </div>
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
@@ -241,17 +273,22 @@
         <!-- /.container -->
 
     </section>
-    
+
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        GitHubCalendar(".github", "xotabu4", { responsive: true });
+    </script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-82683017-1', 'auto');
-  ga('send', 'pageview');
+        ga('create', 'UA-82683017-1', 'auto');
+        ga('send', 'pageview');
 
-</script>
+    </script>
 </body>
 
 </html>
