Added NPM and stackoverflow
- updated icons version
- using CDN - removed local library
- updated section - now geeky
- small text updates

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
 
-
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!-- Custom Font takes forever to load. Disabling.
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     -->
@@ -81,38 +80,48 @@
                     <ul class="list-unstyled">
                         <li>
                             <a href="skype:xatabu4">
-                                <i class="fa fa-skype fa-2x fa-fw"></i> xatabu4</a>
+                                <i class="fab fa-skype fa-2x fa-fw"></i> xatabu4</a>
                             <a href="https://telegram.me/xotabu4">
-                                <i class="fa fa-paper-plane fa-2x fa-fw" aria-hidden="true"></i> @xatabu4</a>
+                                <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> @xatabu4</a>
                             <a href="mailto:xotabu4@gmail.com">
-                                <i class="fa fa-envelope-o fa-2x fa-fw"></i> xotabu4@gmail.com</a>
+                                <i class="far fa-envelope fa-2x fa-fw"></i> xotabu4@gmail.com</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
                             <a href="https://www.facebook.com/Xotabu4">
-                                <i class="fa fa-facebook fa-fw fa-3x"></i>
+                                <i class="fab fa-facebook fa-fw fa-3x"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://twitter.com/xotabu4">
-                                <i class="fa fa-twitter fa-fw fa-3x"></i>
+                                <i class="fab fa-twitter fa-fw fa-3x"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://vk.com/xotabu4">
-                                <i class="fa fa-vk fa-fw fa-3x"></i>
+                                <i class="fab fa-vk fa-fw fa-3x"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
-                                <i class="fa fa-linkedin fa-fw fa-3x"></i>
+                                <i class="fab fa-linkedin fa-fw fa-3x"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.github.com/xotabu4">
-                                <i class="fa fa-github fa-fw fa-3x"></i>
+                                <i class="fab fa-github fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://stackoverflow.com/users/2695752/xotabu4">
+                                <i class="fab fa-stack-overflow fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.npmjs.com/~xotabu4">
+                                <i class="fab fa-npm fa-fw fa-3x"></i>
                             </a>
                         </li>
                     </ul>
@@ -140,17 +149,17 @@
                                 <h4>
                                     <strong>Test automation</strong>
                                 </h4>
-                                <p>Using Java, JavaScript (TypeScript), Python. I used mostly Selenium WebDriver (Appium, ProtractorJS,
-                                    Selenide and many others). Also i have experience with different tools around - Jenkins,
-                                    Maven, Spring, NodeJS, NPM, Pip and many others.</p>
+                                <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools (Webdrivers, ProtractorJS,
+                                    Selenide, Appium ...). Also i have experience with different tools around - Jenkins,
+                                    Docker, NodeJS, NPM, pip and many others.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                    <i class="fa fa-circle fa-stack-2x fa-4x"></i>
-                                    <i class="fa fa-keyboard-o fa-stack-1x text-primary"></i>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-keyboard fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
                                     <strong>Manual testing</strong>
@@ -165,13 +174,12 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-mortar-board fa-stack-1x text-primary"></i>
+                                    <i class="fa fa-graduation-cap fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
                                     <strong>Coaching</strong>
                                 </h4>
-                                <p>Coach at Start-IT training center, reading own course about test automation using ProtractorJS.
-                                    Previously was teaching basics of quality assurance thru online video lessons.</p>
+                                <p>Teaching others how to do JS automation at Start-IT training center. Based on own developed teaching program.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -184,7 +192,7 @@
                                 <h4>
                                     <strong>Presentations and speeches</strong>
                                 </h4>
-                                Participating in different QA conferences, meetups, and other community meetings. Some of my speeches were uploaded to
+                                Participating in different conferences, meetups, and other community meetings. Some of my speeches were uploaded to
                                 <a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH" style="color:red;">YouTube</a>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
@@ -207,14 +215,16 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-laptop fa-stack-1x text-primary"></i>
+                                    <i class="fa fa-microchip fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
-                                    <strong>Tell about acronyms</strong>
+                                    <strong>Geeky devices</strong>
                                 </h4>
-                                <p>HTML, SQL, HTTP/HTTPS, SCRUM and other scary words</p>
+                                <p>
+                                    Always trying to play with new and shiny toys first!
+                                    Once i wasted whole day to host this website on my network router.
+                                </p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
-
                             </div>
                         </div>
 
@@ -237,14 +247,13 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-moon-o fa-stack-1x text-primary"></i>
+                                    <i class="fa fa-moon fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
                                     <strong>Watching stars</strong>
                                 </h4>
                                 <p>I love stars, planets, space, and astronomy.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
-
                             </div>
                         </div>
 
@@ -258,7 +267,7 @@
                                     <strong>Medicine</strong>
                                 </h4>
                                 <p>3 years in medical college and work in hospital was not wasted for me. Still loving all those
-                                    medicine tricks</p>
+                                    healing tricks</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
 
                             </div>
