--- a/website/index.html
+++ b/website/index.html
@@ -8,13 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Oleksandr Khotemsyi personal page">
     <meta name="author" content="Oleksandr Khotemskyi">
-    <meta http-equiv="refresh" content="1; url=https://xotabu4.github.io/" />
+    
 
     <title>Oleksandr Khotemskyi</title>
 
 </head>
 
 <body>
+<a href="https://xotabu4.github.io/">Site moved here - https://xotabu4.github.io/</a>
 </body>
 
 </html>
