Removed vk, reodered others
Removed vk, reodered others

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script src="./gh-calendar/gh.js"></script>
 
     <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
-    <link rel="stylesheet" href="./gh-calendar/css-responsive.css"/>
+    <link rel="stylesheet" href="./gh-calendar/css-responsive.css" />
 </head>
 
 <body>
@@ -90,26 +90,6 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://www.facebook.com/Xotabu4">
-                                <i class="fab fa-facebook fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/xotabu4">
-                                <i class="fab fa-twitter fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://vk.com/xotabu4">
-                                <i class="fab fa-vk fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
-                                <i class="fab fa-linkedin fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
                             <a href="https://www.github.com/xotabu4">
                                 <i class="fab fa-github fa-fw fa-3x"></i>
                             </a>
@@ -122,6 +102,21 @@
                         <li>
                             <a href="https://www.npmjs.com/~xotabu4">
                                 <i class="fab fa-npm fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
+                                <i class="fab fa-linkedin fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/Xotabu4">
+                                <i class="fab fa-facebook fa-fw fa-3x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/xotabu4">
+                                <i class="fab fa-twitter fa-fw fa-3x"></i>
                             </a>
                         </li>
                     </ul>
@@ -149,9 +144,9 @@
                                 <h4>
                                     <strong>Test automation</strong>
                                 </h4>
-                                <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools (Webdrivers, ProtractorJS,
-                                    Selenide, Appium ...). Also i have experience with different tools around - Jenkins,
-                                    Docker, NodeJS, NPM, pip and many others.</p>
+                                <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools (Webdrivers,
+                                    ProtractorJS, Selenide, Appium ...). Also i have experience with different tools around
+                                    - Jenkins, Docker, NodeJS, NPM, pip and many others.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -179,7 +174,8 @@
                                 <h4>
                                     <strong>Coaching</strong>
                                 </h4>
-                                <p>Teaching others how to do JS automation at Start-IT training center. Based on own developed teaching program.</p>
+                                <p>Teaching others how to do JS automation at Start-IT training center. Based on own developed
+                                    teaching program.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -221,8 +217,7 @@
                                     <strong>Geeky devices</strong>
                                 </h4>
                                 <p>
-                                    Always trying to play with new and shiny toys first!
-                                    Once i wasted whole day to host this website on my network router.
+                                    Always trying to play with new and shiny toys first! Once i wasted whole day to host this website on my network router.
                                 </p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
