--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     -->
 
-    <!-- Include the GitHub contributions library. -->
-    <script src="./gh-calendar/gh.js"></script>
-
     <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
     <link rel="stylesheet" href="./gh-calendar/css-responsive.css" />
 </head>
@@ -56,19 +53,11 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Oleksandr Khotemskyi</h1>
-            <h3>Automation and manual quality assurance specialist</h3>
+            <h3>Quality assurance specialist</h3>
             <br>
             <!--<a href="#about" class="btn btn-dark btn-lg">About me</a>-->
         </div>
     </header>
-
-    <section id="github">
-        <br>
-        <div class="github col-lg-10 col-lg-offset-1 text-center">
-            <!-- Loading stuff -->
-            Loading the data...
-        </div>
-    </section>
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -132,7 +121,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>I can do</h2>
+                    <h2>About me</h2>
                     <br>
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
@@ -144,8 +133,10 @@
                                 <h4>
                                     <strong>Test automation</strong>
                                 </h4>
-                                <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools (Webdrivers,
-                                    ProtractorJS, Selenide, Appium ...). Also i have experience with different tools around
+                                <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools
+                                    (Webdrivers,
+                                    ProtractorJS, Selenide, Appium ...). Also i have experience with different tools
+                                    around
                                     - Jenkins, Docker, NodeJS, NPM, pip and many others.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
@@ -159,8 +150,10 @@
                                 <h4>
                                     <strong>Manual testing</strong>
                                 </h4>
-                                <p>A lot of experience with manual testing - web-applications, web-sites, APIs, mobile applications.
-                                    Writing test cases, determining priority of bugs, using different test aproaches - pairwise
+                                <p>A lot of experience with manual testing - web-applications, web-sites, APIs, mobile
+                                    applications.
+                                    Writing test cases, determining priority of bugs, using different test aproaches -
+                                    pairwise
                                     testing, classes of equivalence, boundary testing and many other.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
@@ -174,7 +167,8 @@
                                 <h4>
                                     <strong>Coaching</strong>
                                 </h4>
-                                <p>Teaching others how to do JS automation at Start-IT training center. Based on own developed
+                                <p>Teaching others how to do JS automation at Start-IT training center. Based on own
+                                    developed
                                     teaching program.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
@@ -188,8 +182,10 @@
                                 <h4>
                                     <strong>Presentations and speeches</strong>
                                 </h4>
-                                Participating in different conferences, meetups, and other community meetings. Some of my speeches were uploaded to
-                                <a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH" style="color:red;">YouTube</a>
+                                Participating in different conferences, meetups, and other community meetings. Some of
+                                my speeches were uploaded to
+                                <strong><a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH"
+                                        style="color:red;">YouTube</a></strong>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -217,7 +213,8 @@
                                     <strong>Geeky devices</strong>
                                 </h4>
                                 <p>
-                                    Always trying to play with new and shiny toys first! Once i wasted whole day to host this website on my network router.
+                                    Always trying to play with new and shiny toys first! Once i wasted whole day to
+                                    host this website on my network router.
                                 </p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
@@ -261,7 +258,8 @@
                                 <h4>
                                     <strong>Medicine</strong>
                                 </h4>
-                                <p>3 years in medical college and work in hospital was not wasted for me. Still loving all those
+                                <p>3 years in medical college and work in hospital was not wasted for me. Still loving
+                                    all those
                                     healing tricks</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
 
@@ -275,6 +273,17 @@
             <!-- /.row -->
         </div>
         <!-- /.container -->
+
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row text-center">
+                <br>
+                <iframe src="https://calendar.google.com/calendar/embed?src=n5cifm9ccfmtec0c6eeva2qrn8%40group.calendar.google.com&ctz=Europe%2FKiev"
+                    style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            </div>
+        </div>
 
     </section>
 
