Updated calendar UI

--- a/index.html
+++ b/index.html
@@ -280,8 +280,9 @@
         <div class="container">
             <div class="row text-center">
                 <br>
-                <iframe src="https://calendar.google.com/calendar/embed?src=n5cifm9ccfmtec0c6eeva2qrn8%40group.calendar.google.com&ctz=Europe%2FKiev"
-                    style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+                <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;mode=AGENDA&amp;height=600&amp;wkst=2&amp;hl=en&amp;bgcolor=%23FFFFFF&amp;src=n5cifm9ccfmtec0c6eeva2qrn8%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=Europe%2FKiev"
+                    style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
 
