Updated photo, title and links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Oleksandr Khotemskyi - automation and manual quality assurance specialist">
+    <meta name="description" content="Oleksandr Khotemskyi - Software Development Engineer in Test">
     <meta name="keywords" content="QA,QA automation,WebDriver,Selenium,Quality Assurance,Oleksandr Khotemskyi,Александр Хотемской,Олександр Хотемський">
     <meta name="author" content="Oleksandr Khotemskyi">
 
@@ -14,9 +14,9 @@
     <meta property="og:title" content="Oleksandr Khotemskyi" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://xotabu4.github.io/" />
-    <meta property="og:image" content="https://xotabu4.github.io/img/3033972.jpeg" />
-    <meta property="og:description" content="Automation and manual quality assurance specialist" />
-    <meta property="og:site_name" content="Oleksandr Khotemskyi personal website" />
+    <meta property="og:image" content="https://xotabu4.github.io/img/bg.jpeg" />
+    <meta property="og:description" content="Software Development Engineer in Test" />
+    <meta property="og:site_name" content="Oleksandr Khotemskyi" />
 
     <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="favicons/vores-l-tartan-sunday-best-152-213357.png">
@@ -51,7 +51,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Oleksandr Khotemskyi</h1>
-            <h3>Quality assurance specialist</h3>
+            <h3>Software Development Engineer in Test</h3>
             <br>
             <!--<a href="#about" class="btn btn-dark btn-lg">About me</a>-->
         </div>
@@ -62,7 +62,7 @@
             <div class="row">
                 <div id="contact" class="col-lg-10 col-lg-offset-1 text-center">
                     <h3>
-                        <strong>Want to talk with me?</strong>
+                        <strong>Contacts</strong>
                     </h3>
                     <ul class="list-unstyled">
                         <li>
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/Xotabu4">
+                            <a href="https://www.facebook.com/OleksandrKhotemskyi/">
                                 <i class="fab fa-facebook fa-fw fa-3x"></i>
                             </a>
                         </li>
@@ -106,8 +106,12 @@
                                 <i class="fab fa-twitter fa-fw fa-3x"></i>
                             </a>
                         </li>
+                        <li>
+                            <a href="https://www.youtube.com/user/Xotabu44/">
+                                <i class="fab fa-youtube fa-fw fa-3x"></i>
+                            </a>
+                        </li>
                     </ul>
-
                 </div>
             </div>
         </div>
@@ -132,8 +136,8 @@
                                     <strong>Test automation</strong>
                                 </h4>
                                 <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools
-                                    (Webdrivers,
-                                    ProtractorJS, Selenide, Appium ...). Also i have experience with different tools
+                                    (Webdriver,
+                                    ProtractorJS, WebdriverIO, Selenide). Also i have experience with different tools
                                     around
                                     - Jenkins, Docker, NodeJS, NPM, pip and many others.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
@@ -271,18 +275,6 @@
             <!-- /.row -->
         </div>
         <!-- /.container -->
-
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="row text-center">
-                <br>
-
-                <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;mode=AGENDA&amp;height=600&amp;wkst=2&amp;hl=en&amp;bgcolor=%23FFFFFF&amp;src=n5cifm9ccfmtec0c6eeva2qrn8%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=Europe%2FKiev"
-                    style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-            </div>
-        </div>
 
     </section>
 
