--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div class="text-vertical-center">
             <h1>Oleksandr Khotemskyi</h1>
             <h3>Software Development Engineer in Test</h3>
+            <a href="blog/index.html">Blog</a>
             <br>
             <!--<a href="#about" class="btn btn-dark btn-lg">About me</a>-->
         </div>
